app/assets/stylesheets/SHOP_Index_bk.css
/* ... */
.garage_list {
	float: left;
	height: 320px;
	width: 238px;
	border: 1px solid #CCCCCC;
	box-shadow: 2px 2px 2px #E9E9E9;
	margin-left: 6px;
	margin-bottom: 10px;
	margin-top: 0px;
	margin-right: 0px;
	display:inline;
}
.garage_name{
	height:35px;
	width:224px;
	float:left;
	background-position: left;
	text-indent: 10px;
	line-height: 33px;
	background-color: #E1F7FD;
	padding-right: 2px;
	padding-left: 5px;
	display:inline;
	}
.garage_detail{
	float: left;
	width: 230px;
	list-style-position: inside;
	height: 120px;
	display:inline;
}
.garage_detail li{
	float: left;
	width: 220px;
	height: auto;
	font-size: 12px;
	line-height: 25px;
	list-style-position: inside;
	margin-left: 7px;
	display:inline;
}
.area{
	float: right;
	width: 280px;
	height: 35px;
	line-height: 30px;
	text-align: right;
	margin-right: 10px;
}


/*2014-3-12新加样式关于我们*/
.aboutus_wrap{
	width:960px;
	margin-top: 0px;
	margin-right: auto;
	margin-bottom: 0px;
	margin-left: auto;
	background-image: url(../images/pic_r2_c4_s1_s1.jpg);
	background-repeat: repeat-x;
	background-color: #F8F8F8;
}
.aboutus_left{
	width:215px;
	height: 600px;
	float: left;
}
.aboutus_right{
	width:735px;
	min-height: 600px;
#	height: 700px;
	#float: right;
	margin-left: auto;
	margin-top: 0px;
	margin-right: auto;
	margin-bottom: 0px;
}
.aboutus_pic{
	width:198px;
	height: 86px;
	float: left;
}
.aboutus_menu{
	width:194px;
	height: 410px;
	float: left;
	border-top-width: 5px;
	border-right-width: 1px;
	border-bottom-width: 5px;
	border-left-width: 1px;
	border-top-style: solid;
	border-right-style: solid;
	border-bottom-style: solid;
	border-left-style: solid;
	border-top-color: #2E99C7;
	border-right-color: #CCCCCC;
	border-bottom-color: #2E99C7;
	border-left-color: #CCCCCC;
	margin-top: 15px;
	box-shadow: 2px 2px 2px #E9E9E9;
	display:inline;
	background-color: #FFFFFF;
	list-style-position: inside;
	list-style-image: none;
	list-style-type: none;
}
.aboutus_menu ul{
	list-style: none;
	float: left;
	width: 98%;
	height: auto;
	padding-left: 10px;
}
.aboutus_menu ul li{
	font-size: 14px;
	height: 50px;
	width: 99%;
	border-bottom-width: 1px;
	border-bottom-style: solid;
	border-bottom-color: #DFDFDF;
	float: left;
	line-height: 50px;
	text-align: left;
	display: inline;
	list-style-position: inside;
	list-style-image: none;
	list-style-type: none;
}
.aboutus_title{
	margin-top:30px;
	padding-top:10px;
	width:700px;
	height: 40px;
	float: left;
	background-color: #FFFFFF;
	font-size: 14px;
	font-weight: bold;
	line-height: 25px;
	text-align: left;
	color: #2E99C7;
	padding-left: 10px;
	display: inline;
	list-style-position: inside;
	border-top-width: 1px;
	border-top-style: solid;
	border-top-color: #DFDFDF;
	border-left-width: 1px;
	border-left-style: solid;
	border-left-color: #DFDFDF;
	border-right-width: 1px;
	border-right-style: solid;
	border-right-color: #DFDFDF;
	border-bottom-width: 1px																																																																																																								;
	border-bottom-style: solid;
	border-bottom-color: #DFDFDF;
}
.aboutus_words {
	line-height: 30px;
	font-size: 14px;
	color: #333333;
#	height: 500px;
	width: 700px;								
	text-align: left;
	display: inline;
	list-style-position: inside;
#	float: left;
	padding-top: 10px;
	padding-left: 10px;
}

.shown_area{
	width:750px ;
    margin-left:100px;
}

/*首页底部推荐车行2014.3.27*/
.home_rec_recommend {
	height: 440px;
	width: 190px;
	background-repeat: no-repeat;
	background-position: bottom;
	background-color: #FFFFFF;
	float: left;
	margin-left: 4px;
}
.home_rec_recommend2 {
	height: 440px;
	width: 190px;
	background-repeat: no-repeat;
	background-position: bottom;
	background-color: #FFFFFF;
	float: left;
}
.home_rec_recommend_inside {
	width: 172px;
	height: 425px;
	border-top-width: 1px;
	border-right-width: 1px;
	border-left-width: 1px;
	border-top-style: solid;
	border-right-style: solid;
	border-left-style: solid;
	border-top-color: #E0E1D9;
	border-right-color: #E0E1D9;
	border-left-color: #E0E1D9;
	margin-right: auto;
	margin-left: auto;
}
.home_rec_recommend_inside h1 {
	height: 200px;
	width: 160px;
	margin-top: 7px;
	margin-right: auto;
	margin-bottom: 0px;
	margin-left: auto;
}
.home_rec_recommend_inside h2 {
	width: 160px;
	height: 45px;
	margin-top: 10px;
	margin-right: auto;
	margin-bottom: 0px;
	margin-left: auto;
	font-size: 12px;
	color: #666666;
	line-height: 22px;
	overflow: hidden;
}
.home_rec_recommend_inside h3 {
	color: #A6A699;
	font-size: 12px;
	line-height: 22px;
	margin-right: auto;
	margin-bottom: 0px;
	margin-left: auto;
	width: 160px;
	height: 115px;
	margin-top: 0px;
}
.home_rec_recommend_inside h4 {
	text-align: right;
	text-indent: 5px;
	height: 40px;
	width: 160px;
}

.second_class_link{

}

/*2014.3.20商城底部正品保障等图标*/
.footer_ico {
	width: 940px;
	margin-top: 10px;
	margin-right: auto;
	margin-bottom: 0px;
	margin-left: auto;
	height: 160px;
	background-color: #FFFFFF;
	padding-right: 10px;
	padding-left: 10px;
	padding-top: 20px;
}
.footer_fore1 {
	height: 135px;
	width: 140px;
	float: left;
	margin-left: 40px;
}
.footer_fore1 h1 {
	font-size: 16px;
	color: #7F7F7F;
	padding-top: 15px;
	padding-bottom: 3px;
	font-weight: bold;
}
.footer_fore1 h2 {
	font-size: 12px;
	color: #858585;
	padding-top: 5px;
}

/*2014.4.8商城购物车页面*/
.cart_box {
	width: 980px;
	min-height:500px;
	margin-top: 0px;
	margin-right: auto;
	margin-bottom: 0px;
	margin-left: auto;
	background-color: #FFFFFF;
}
.shopping_cart_title {
	font-size: 12px;
	margin-bottom: 15px;
	text-align: left;
#	text-indent: 20px;
	height: 30px;
	padding-top: 20px;
}
.shopping_step {
	background-image: url(../images/shopping_cart_r2_c2.jpg);
	background-repeat: no-repeat;
}
.shopping_step2 {
	background-image: url(../images/shopping_cart_r2_c3.jpg);
	background-repeat: no-repeat;
}
.shopping_step3 {
	background-image: url(../images/shopping_cart_r2_c4.jpg);
	background-repeat: no-repeat;
}
/* ... */

